# rewind

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  protocol_request.md
.github/actions/rewind-setup/: action.yml
.github/workflows/: ci.yml  docker.yml  release.yml
Formula/: rewind.rb
deploy/: prometheus-alerts.yaml
docs/: architecture.md  configuration.md  getting-started.md  kubernetes.md
examples/ci-github-actions/: regression-test.yml  snapshot-audit.yml
examples/docker-compose-demo/: docker-compose.yml
examples/docker-compose-demo/api/: Dockerfile  app.py
examples/docker-compose-demo/worker/: Dockerfile  app.py  init.sql
helm/rewind/: Chart.yaml  values.yaml
helm/rewind/files/: rewind-dashboard.json  seccomp.json
helm/rewind/templates/: NOTES.txt  clusterrole.yaml  configmap.yaml  daemonset.yaml  grafana-dashboard.yaml  namespace.yaml  seccomp-setup.yaml  service.yaml  serviceaccount.yaml
k8s/: clusterrole.yaml  configmap.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  server-ha.yaml  serviceaccount.yaml
packaging/deb/DEBIAN/: control
packaging/rpm/: rewind.spec
rewind/: Cargo.toml  build.rs
rewind-common/: Cargo.toml
rewind-common/src/: lib.rs
rewind-ebpf/: Cargo.toml
rewind-ebpf/src/: main.rs  vmlinux.rs
rewind/benches/: ring_buffer.rs  snapshot.rs
rewind/src/: audit.rs  cli.rs  compliance.rs  crypto.rs  diff.rs  export.rs  gdpr.rs  lib.rs  main.rs  metrics.rs  notify.rs  oidc.rs  push.rs  report.rs  retention.rs  scrub.rs  search.rs  secrets.rs  server.rs  storage.rs  timeline.rs  verify.rs  webhook.rs
rewind/src/capture/: agent.rs  mod.rs  ring.rs  service_map.rs
rewind/src/replay/: diff.rs  engine.rs  mod.rs  network.rs
rewind/src/store/: mod.rs  snapshot.rs
rewind/tests/: cli_integration.rs  server_integration.rs
rewind/tests/fixtures/: sample.rwd
tests/load/: k6-server.js
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts  snapshotViewer.ts
