[package]
name = "rewind"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-common = { path = "../rewind-common", features = ["user"] }
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
