[package]
name = "rewind"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-common = { path = "../rewind-common", features = ["user"] }
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = "0.7"
bytes = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "snapshot"
harness = false
