[package]
name = "rewind"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-common = { path = "../rewind-common", features = ["user"] }
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1", "http2"] }
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
bytes = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9"
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
age = "0.10"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "snapshot"
harness = false
